added in new names

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Murtaza</h1>
+    <h1>Hello Murtaza, erik, murtaza, AJ and Bilal</h1>
 </body>
 </html>
